feat: Fix all compilation errors and enhance trading-service documentation
This commit achieves zero compilation errors (from 101) and production readiness
for the trading-service module with comprehensive documentation updates.

Compilation Fixes (Build Fixes 11-17):
- Fix Result type inference issues in DisasterRecoveryService (3 occurrences)
  Added explicit type parameters to Result.success() and Result.failure() calls
  to resolve generic type inference errors in Optional.map() chains
  Lines: 154, 259, 320

- Fix Validation monad type inference in FunctionalRiskCheckEngine
  Changed List<Validation<...>> to List<Function<..., Validation<...>>>
  to correctly represent Functions returning Validation instead of Validation instances
  Line: 166

- Fix Result.fold() parameter order in FunctionalOrderRouter
  Corrected parameter order to match signature: fold(successMapper, failureMapper)
  Previously had parameters reversed causing type inference errors
  Lines: 131-134

- Fix checked exception handling in SecurityConfig
  Added try-catch block inside Optional.map() lambda to wrap checked Exception
  from httpSecurity.requiresChannel() into unchecked RuntimeException
  Lines: 137-148

- Fix lambda effectively final violations in OrderServiceImpl (2 occurrences)
  Created final local copies of variables before lambda usage
  Resolved "variable used in lambda but reassigned later" errors
  Lines: 332, 385

- Add missing imports (Optional, Stream) to MarketDataSnapshot and MultiBrokerAggregationService

Documentation Enhancements:
- Enhanced README with detailed setup instructions
  Added step-by-step Docker and manual setup procedures
  Included database initialization and migration commands

- Added comprehensive API endpoint documentation
  Complete request/response examples for all core endpoints
  Order management, portfolio, positions, market data, and risk APIs
  JWT authentication examples and error response formats

- Added troubleshooting section
  Compilat